--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: Dhurjati;
+  src: url(../Fonts/Dhurjati-Regular.ttf);
+}
+@font-face {
+  font-family: Doppio One;
+  src: url(../Fonts/DoppioOne-Regular.ttf);
+}
+@font-face {
+  font-family: Quicksand;
+  src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
+}
 body {
   font-size: 10px;
 }/*# sourceMappingURL=style.css.map */
