--- a/style.css
+++ b/style.css
@@ -11,5 +11,7 @@
   src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
 }
 body {
+  margin: 0;
+  padding: 0;
   font-size: 10px;
 }/*# sourceMappingURL=style.css.map */
