--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+//fonts
 @font-face {
     font-family: Dhurjati;
     src: url(../Fonts/Dhurjati-Regular.ttf);
@@ -12,7 +13,9 @@
     font-family: Quicksand;
     src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
 }
-
+//
 body{
+    margin: 0;
+    padding: 0;
     font-size: 10px;
 }
