--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@
   font-family: Quicksand;
   src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
 }
+html {
+  font-size: 10px;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-size: 10px;
 }/*# sourceMappingURL=style.css.map */
