--- a/style.scss
+++ b/style.scss
@@ -14,8 +14,12 @@
     src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
 }
 //
+
+html{
+    font-size: 10px;
+}
+
 body{
     margin: 0;
     padding: 0;
-    font-size: 10px;
 }
