--- a/style.css
+++ b/style.css
@@ -25,16 +25,11 @@ body {
 }
 
 .main .main__bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  height: 100vh;
   background: url(./img/bg.png) 0 0/100% 100% no-repeat;
 }
 .main .main__nav {
-  padding: 0 100px;
-  margin: 56px 0 100px 0;
+  padding: 56px 100px 125px 100px;
   display: flex;
   justify-content: space-between;
 }
@@ -124,9 +119,9 @@ body {
   left: 25px;
 }
 .main .main__description {
-  z-index: 1;
   padding: 72px 67px 10% 200px;
-  margin: 0 680px 0 100px;
+  margin: 0 680px 0 0;
+  padding-left: 10%;
   position: relative;
   z-index: 0;
 }
