--- a/style.css
+++ b/style.css
@@ -17,4 +17,106 @@ html {
 body {
   margin: 0;
   padding: 0;
+}
+
+.recomendation {
+  margin: 0;
+  position: relative;
+  width: 100vw;
+  height: 100vw;
+  background: linear-gradient(112deg, rgb(26, 28, 75) 16.68%, rgb(8, 151, 171) 96.66%);
+}
+
+.HU-1-3 {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+.HU-1-3__leftpanel {
+  position: relative;
+  width: 49vw;
+}
+.HU-1-3__leftpanel .leftpanel__img1 {
+  width: 10rem;
+  position: absolute;
+  left: 35%;
+  top: 30%;
+}
+.HU-1-3__leftpanel .leftpanel__img2 {
+  width: 10rem;
+  position: absolute;
+  left: 50%;
+  top: 30%;
+}
+.HU-1-3__leftpanel .leftpanel__backimg {
+  left: 0rem;
+  top: 99.3rem;
+  width: 60rem;
+}
+.HU-1-3__leftpanel h1 {
+  font-family: "Dhurjati";
+  position: absolute;
+  left: 24.5%;
+  top: 6%;
+  color: white;
+  font-size: 5.6rem;
+  line-height: 16rem;
+  letter-spacing: 1.312rem;
+  text-transform: uppercase;
+  width: 20vw;
+}
+.HU-1-3__rightpanel {
+  width: 50vw;
+}
+.HU-1-3__rightpanel h2 {
+  font-family: "Doppio One";
+  width: 45vw;
+  font-size: 4.2rem;
+  line-height: 6rem;
+  color: white;
+  margin-top: 15rem;
+}
+.HU-1-3__rightpanel h3 {
+  font-family: "Doppio One";
+  font-size: 2.4rem;
+  line-height: 4rem;
+  color: white;
+}
+.HU-1-3__rightpanel span {
+  font-family: "Doppio One";
+  color: #D8A4B6;
+  font-size: 3rem;
+}
+.HU-1-3__rightpanel p {
+  font-family: "Doppio One";
+  width: 50vw;
+  color: rgba(255, 255, 255, 0.54);
+  font-size: 1.6rem;
+}
+.HU-1-3 .rightpanel__link {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.HU-1-3 .rightpanel__link a {
+  font-family: "Dhurjati";
+  font-size: 2.4rem;
+  line-height: 6.7rem;
+  text-decoration: none;
+  color: white;
+}
+.HU-1-3 .rightpanel__link hr {
+  width: 10rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.HU-1-3 .bg {
+  position: absolute;
+  width: 50vw;
+  height: 100vh;
+  left: 0rem;
+  top: 99.3rem;
+  background: linear-gradient(112deg, rgba(26, 28, 75, 0.56) 16.68%, rgba(8, 151, 171, 0.56) 96.66%);
 }/*# sourceMappingURL=style.css.map */
