--- a/style.scss
+++ b/style.scss
@@ -23,3 +23,108 @@ body{
     margin: 0;
     padding: 0;
 }
+.recomendation{
+    margin: 0;
+    position: relative;
+    width: 100vw;
+    height: 100vw;
+    background: linear-gradient(112deg, rgba(26, 28, 75, 1) 16.68%, rgba(8, 151, 171, 1) 96.66%);
+}
+.HU-1-3{
+    position: absolute;
+    width:100vw;
+    height: 100vh;
+    display: flex;
+&__leftpanel{
+    position: relative;
+    width: 49vw;
+   .leftpanel{
+    &__img1{
+    width: 10rem;
+    position: absolute;
+    left: 35%;
+    top: 30%;
+    }
+    &__img2{
+        width: 10rem;
+        position: absolute;
+        left: 50%;
+        top: 30%;
+       }
+    &__backimg{
+        left: 0rem;
+        top: 99.3rem;
+        width: 60rem;
+    }
+    
+    }
+   h1{
+    font-family: 'Dhurjati';
+    position: absolute;
+    left: 24.5%;
+    top: 6%;
+    color: white;
+    font-size: 5.6rem;
+    line-height: 16rem;
+    letter-spacing: 1.312rem;
+    text-transform: uppercase;
+    width: 20vw;
+   }
+}
+&__rightpanel{
+    width: 50vw;
+    h2{ 
+        font-family: 'Doppio One';
+        width: 45vw;
+        font-size:4.2rem;
+        line-height: 6rem;
+        color: white;
+        margin-top: 15rem;
+    }
+    h3{
+        font-family: 'Doppio One';
+        font-size: 2.4rem;
+        line-height: 4rem;
+        color: white;
+    }
+    span{
+        font-family: 'Doppio One';
+        color: #D8A4B6;
+        font-size:3rem ;
+    }
+    p{
+        font-family: 'Doppio One';
+        width: 50vw;
+        color:rgba(255, 255, 255, 0.54);
+        font-size: 1.6rem;
+    }
+}
+    .rightpanel__link{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        a{
+            font-family: 'Dhurjati';
+            font-size: 2.4rem;
+            line-height: 6.7rem,;
+            text-decoration:none;
+            color: white;  
+        }
+        hr{
+        width: 10rem;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        }
+    }
+    .bg{ 
+        position: absolute;
+        width: 50vw;
+        height: 100vh;
+        left: 0rem;
+        top: 99.3rem;
+        background: linear-gradient(112deg, rgba(26, 28, 75, 0.56) 16.68%, rgba(8, 151, 171, 0.56) 96.66%);
+    }
+}
+
+
