--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ body{
     margin: 0;
     padding: 0;
 }
-.recomendation{
+.recommendation{
     margin: 0;
     position: relative;
     width: 100vw;
