--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ body{
 .HU-1-3{
     position: absolute;
     width:100vw;
-    height: 100vh;
+    height: auto;
     display: flex;
 &__leftpanel{
     position: relative;
