--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
-  font-family: Dhurjati;
-  src: url(../Fonts/Dhurjati-Regular.ttf);
+  font-family: "Dhurjati", sans-serif;
+  src: url(./Fonts/Dhurjati-Regular.ttf);
 }
 @font-face {
-  font-family: Doppio One;
-  src: url(../Fonts/DoppioOne-Regular.ttf);
+  font-family: "Doppio One", sans-serif;
+  src: url(./Fonts/Doppio_One/DoppioOne-Regular.ttf);
 }
 @font-face {
-  font-family: Quicksand;
-  src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
+  font-family: "Quicksand", sans-serif;
+  src: url(./Fonts/Quicksand-VariableFont_wght.ttf);
 }
 html {
   font-size: 10px;
@@ -49,15 +49,23 @@ body {
   top: 30%;
 }
 .HU-1-3__leftpanel .leftpanel__backimg {
-  left: 0rem;
-  top: 99.3rem;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
   width: 60rem;
 }
+.HU-1-3__leftpanel .leftpanel__content {
+  left: 0;
+  top: 0%;
+  position: relative;
+  width: 65rem;
+  height: 65rem;
+}
 .HU-1-3__leftpanel h1 {
-  font-family: "Dhurjati";
+  font-family: "Dhurjati", sans-serif;
   position: absolute;
-  left: 24.5%;
-  top: 6%;
+  left: 27%;
+  top: 8%;
   color: white;
   font-size: 5.6rem;
   line-height: 16rem;
@@ -68,27 +76,27 @@ body {
 .HU-1-3__rightpanel {
   width: 50vw;
 }
-.HU-1-3__rightpanel h2 {
-  font-family: "Doppio One";
+.HU-1-3__rightpanel span {
+  font-family: "Doppio One", sans-serif;
+  color: #D8A4B6;
+  font-size: 3rem;
+}
+.HU-1-3__rightpanel .h2 {
+  font-family: "Doppio One", sans-serif;
   width: 45vw;
   font-size: 4.2rem;
   line-height: 6rem;
   color: white;
   margin-top: 15rem;
 }
-.HU-1-3__rightpanel h3 {
-  font-family: "Doppio One";
+.HU-1-3__rightpanel .h3 {
+  font-family: "Doppio One", sans-serif;
   font-size: 2.4rem;
   line-height: 4rem;
   color: white;
 }
-.HU-1-3__rightpanel span {
-  font-family: "Doppio One";
-  color: #D8A4B6;
-  font-size: 3rem;
-}
 .HU-1-3__rightpanel p {
-  font-family: "Doppio One";
+  font-family: "Doppio One", sans-serif;
   width: 50vw;
   color: rgba(255, 255, 255, 0.54);
   font-size: 1.6rem;
@@ -99,7 +107,7 @@ body {
   flex-direction: column;
 }
 .HU-1-3 .rightpanel__link a {
-  font-family: "Dhurjati";
+  font-family: "Dhurjati", sans-serif;
   font-size: 2.4rem;
   line-height: 6.7rem;
   text-decoration: none;
