--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: Dhurjati;
-  src: url(../Fonts/Dhurjati-Regular.ttf);
+  src: url(./Fonts/Dhurjati-Regular.ttf);
 }
 @font-face {
   font-family: Doppio One;
-  src: url(../Fonts/DoppioOne-Regular.ttf);
+  src: url(./Fonts/DoppioOne-Regular.ttf);
 }
 @font-face {
   font-family: Quicksand;
-  src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
+  src: url(./Fonts/Quicksand-VariableFont_wght.ttf);
 }
 html {
   font-size: 10px;
@@ -17,4 +17,158 @@ html {
 body {
   margin: 0;
   padding: 0;
+}
+
+.recommendation {
+  margin: 0;
+  position: relative;
+  background: linear-gradient(112deg, rgb(26, 28, 75) 16.68%, rgb(8, 151, 171) 96.66%);
+}
+
+.HU-1-3 {
+  width: 100vw;
+  height: auto;
+  display: flex;
+}
+.HU-1-3__leftpanel {
+  position: relative;
+  width: 49vw;
+}
+.HU-1-3__leftpanel .leftpanel__img1 {
+  width: 10rem;
+  position: absolute;
+  left: 35%;
+  top: 30%;
+}
+.HU-1-3__leftpanel .leftpanel__img2 {
+  width: 10rem;
+  position: absolute;
+  left: 50%;
+  top: 30%;
+}
+.HU-1-3__leftpanel .leftpanel__backimg {
+  left: 0rem;
+  top: 99.3rem;
+  width: 60rem;
+}
+.HU-1-3__leftpanel h1 {
+  font-family: "Dhurjati";
+  position: absolute;
+  left: 24.5%;
+  top: 6%;
+  color: white;
+  font-size: 5.6rem;
+  line-height: 16rem;
+  letter-spacing: 1.312rem;
+  text-transform: uppercase;
+  width: 20vw;
+}
+.HU-1-3__rightpanel {
+  width: 50vw;
+}
+.HU-1-3__rightpanel h2 {
+  font-family: 'Doppio One', sans-serif;
+  width: 45vw;
+  font-size: 4.2rem;
+  line-height: 6rem;
+  color: white;
+  margin-top: 15rem;
+}
+.HU-1-3__rightpanel h3 {
+  font-family: "Doppio One";
+  font-size: 2.4rem;
+  line-height: 4rem;
+  color: white;
+}
+.HU-1-3__rightpanel span {
+  font-family: "Doppio One";
+  color: #D8A4B6;
+  font-size: 3rem;
+}
+.HU-1-3__rightpanel p {
+  font-family: "Doppio One";
+  width: 50vw;
+  color: rgba(255, 255, 255, 0.54);
+  font-size: 1.6rem;
+}
+.HU-1-3 .rightpanel__link {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.HU-1-3 .rightpanel__link a {
+  font-family: "Dhurjati";
+  font-size: 2.4rem;
+  line-height: 6.7rem;
+  text-decoration: none;
+  color: white;
+}
+.HU-1-3 .rightpanel__link hr {
+  width: 10rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }/*# sourceMappingURL=style.css.map */
+.HU-1-2, .HU-1-4{
+  padding-top: 65px;
+}
+.HU-1-2__h2{
+  font-family: 'Doppio One', sans-serif;
+  font-size: 4.8rem;
+  color: white;
+  text-align: center;
+  margin: 0;
+  position: relative;
+  font-weight: 400;
+}
+.HU-1-2__product, .HU-1-4__product{
+  display: flex;
+  padding: 5%;
+}
+.product__info{
+  width: 50%;
+}
+.info__h2{
+  font-family: 'Doppio One', sans-serif;
+  font-size: 4.8rem;
+  color: white;
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.info__starting{
+  color: white;
+  margin: 0;
+  margin-right: 10%;
+}
+.info__price{
+  color: #ddafbf;
+  margin: 0;
+}
+.info__prices{
+  display: flex;
+  font-family: 'Doppio One';
+  font-size: 3.2rem;
+  font-weight: 400;
+}
+.info__lorum{
+  font-family: 'Doppio One';
+  font-size: 20px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.57);
+  width: 90%;
+}
+.info__buy{
+  font-family: 'Dhurjati';
+  font-weight: 400;
+  color: white;
+  font-size: 3.6rem;
+  line-height: 6.7rem;
+  border-bottom: 1px solid white;
+  display: inline-block;
+  margin: 0;
+  text-decoration: none;
+}
+.product__img img{
+  width: 590px;
+}
