--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,6 @@ body{
     margin: 0;
     position: relative;
     width: 100vw;
-    height: 100vw;
     background: linear-gradient(112deg, rgba(26, 28, 75, 1) 16.68%, rgba(8, 151, 171, 1) 96.66%);
 }
 .HU-1-3{
@@ -68,9 +67,10 @@ h1{
     font-family: 'Dhurjati',sans-serif;
     position: absolute;
     left: 27%;
-    top: 8%;
+    top: 7.5%;
     color: white;
     font-size: 5.6rem;
+    font-weight: normal;
     line-height: 16rem;
     letter-spacing: 1.312rem;
     text-transform: uppercase;
@@ -96,6 +96,7 @@ h1{
         font-family: 'Doppio One', sans-serif;
         width: 45vw;
         font-size:4.2rem;
+        font-weight: normal;
         line-height: 6rem;
         color: white;
         margin-top: 15rem;   
@@ -103,6 +104,7 @@ h1{
     .h3{
         font-family: 'Doppio One', sans-serif;
         font-size: 2.4rem;
+        font-weight: normal;
         line-height: 4rem;
         color: white;
     }
