--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ body{
     margin: 0;
     position: relative;
     width: 100vw;
+    // height: auto;
     background: linear-gradient(112deg, rgba(26, 28, 75, 1) 16.68%, rgba(8, 151, 171, 1) 96.66%);
 }
 .HU-1-3{
@@ -51,9 +52,9 @@ body{
 }
 &__backimg{
     position: absolute;
-        left: 1rem;
-        top:0.5rem;
-        width: 60rem;
+        left: 1.5rem;
+        top:1rem;
+        width: 58rem;
 }
 &__content{
     left: 0;
