--- a/style.css
+++ b/style.css
@@ -17,4 +17,361 @@ html {
 body {
   margin: 0;
   padding: 0;
+}
+
+.elem1__text > p, .description__square > p {
+  margin: 0;
+  padding: 0;
+}
+
+.main .main__bg {
+  width: 100vw;
+  background: url(./img/bg.png) 0 0/100% 100% no-repeat;
+}
+.main .main__nav {
+  padding: 56px 100px 125px 100px;
+  display: flex;
+  justify-content: space-between;
+}
+.main .main__nav .nav__elem1 {
+  display: flex;
+  align-items: center;
+}
+.main .main__nav .nav__elem1 .elem1__imgContainer {
+  display: inline-block;
+  height: 100%;
+}
+.main .main__nav .nav__elem1 .elem1__imgContainer .elem1__img {
+  width: 105%;
+  height: 105%;
+}
+.main .main__nav .nav__elem1 .elem1__text .elem1__text1 {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.6rem;
+  font-size: 2rem;
+  line-height: 20px;
+  color: #0897AB;
+  padding-left: 10px;
+  padding-top: 5px;
+  text-transform: uppercase;
+}
+.main .main__nav .nav__elem1 .elem1__text .elem1__text2 {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.6rem;
+  font-size: 2rem;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding-left: 34px;
+  text-transform: uppercase;
+}
+.main .main__nav .nav__elem2 {
+  display: flex;
+  align-items: center;
+  gap: 53px;
+}
+.main .main__nav .nav__elem2 .elem2__searchContainer {
+  background: rgba(40, 40, 52, 0.01);
+  border: 2px solid #0897AB;
+  box-shadow: 0px 0px 38px rgba(0, 0, 0, 0.52);
+  border-radius: 23px;
+  border-radius: 75px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 176px;
+  padding-right: 225px;
+  display: flex;
+  justify-content: flex-start;
+  background: url(./img/magnifier.svg) 29px 18px no-repeat;
+}
+.main .main__nav .nav__elem2 .elem2__searchContainer .elem2__search {
+  margin-left: 64px;
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 20px;
+  color: rgba(255, 255, 255, 0.58);
+}
+.main .main__nav .nav__elem2 .elem2__bin {
+  background: url(./img/bin.svg) no-repeat;
+  width: 47px;
+  height: 44px;
+  text-align: center;
+  position: relative;
+}
+.main .main__nav .nav__elem2 .elem2__bin .elem2__text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+  background-color: #0897AB;
+  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 27px;
+  left: 25px;
+}
+.main .main__description {
+  padding: 100px 67px 10% 200px;
+  margin: 0 680px 0 0;
+  padding-left: 10%;
+  position: relative;
+  z-index: 0;
+  bottom: 100px;
+  right: 30px;
+}
+.main .main__description .description__square .description__imgContainer {
+  position: absolute;
+  z-index: -1;
+  margin: -100px 0 0 -75px;
+}
+.main .main__description .description__square .description__imgContainer .description__img {
+  width: 800px;
+}
+.main .main__description .description__square .description__buttonContainer {
+  display: inline-block;
+}
+.main .main__description .description__square .description__h1 {
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 4.8rem;
+  line-height: 60px;
+  color: #FFFFFF;
+  width: 500px;
+}
+.main .main__description .description__square .description__text {
+  width: 650px;
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 157%;
+  letter-spacing: 0.07em;
+  color: #FFFFFF;
+  margin-bottom: 30px;
+}
+.main .main__description .description__square .description__text::first-letter {
+  padding-left: 15px;
+}
+.main .main__description .description__square .description__button {
+  font-family: "Doppio One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 25px;
+  color: #FFFFFF;
+  padding: 20px 62px;
+  background: url(./img/Subtract.svg) 0 0/100% 100% no-repeat;
+}
+.main .main__description .description__square .description__link {
+  text-decoration: none;
+}
+
+.recommendation {
+  margin: 0;
+  position: relative;
+  background: linear-gradient(112deg, rgb(26, 28, 75) 16.68%, rgb(8, 151, 171) 96.66%);
+}
+
+.HU-1-3 {
+  width: 100vw;
+  height: auto;
+  display: flex;
+}
+
+.HU-1-3__leftpanel {
+  position: relative;
+  width: 49vw;
+  width: 650px;
+  z-index: 0;
+}
+
+.HU-1-3__leftpanel .leftpanel__img1 {
+  width: 125px;
+  position: absolute;
+  left: 35%;
+  top: 20%;
+}
+
+.HU-1-3__leftpanel .leftpanel__img2 {
+  width: 125px;
+  position: absolute;
+  left: 53.847%;
+  height: 405px;
+  top: 20%;
+}
+
+.HU-1-3__leftpanel .leftpanel__backimg {
+  position: absolute;
+  z-index: -1;
+  left: 1.5rem;
+  top: 1rem;
+  width: 58rem;
+}
+
+.leftpanel__content {
+  left: 0;
+  top: 0%;
+  position: relative;
+  width: 65rem;
+  height: 65rem;
+}
+
+.HU-1-3__leftpanel h1 {
+  font-family: "Dhurjati", sans-serif;
+  position: absolute;
+  left: 27%;
+  top: 7.5%;
+  top: 1%;
+  left: 22%;
+  color: white;
+  font-size: 5.6rem;
+  font-size: 9.6rem;
+  font-weight: normal;
+  line-height: 16rem;
+  letter-spacing: 1.312rem;
+  text-transform: uppercase;
+  width: 20vw;
+}
+
+.HU-1-3__rightpanel {
+  width: 50vw;
+}
+
+.HU-1-3__rightpanel h2 {
+  font-family: "Doppio One", sans-serif;
+  font-size: 4.8rem;
+  font-weight: normal;
+  color: white;
+  font-weight: 400;
+  margin-top: 15rem;
+}
+
+.HU-1-3__rightpanel h3 {
+  font-family: "Doppio One";
+  font-size: 2.4rem;
+  font-size: 3.2rem;
+  line-height: 4rem;
+  color: white;
+  font-weight: normal;
+}
+
+.HU-1-3__rightpanel span {
+  font-family: "Doppio One";
+  color: #D8A4B6;
+  font-size: 3rem;
+  font-size: 3.2rem;
+}
+
+.HU-1-3__rightpanel p {
+  font-family: "Doppio One";
+  font-size: 2rem;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.57);
+  width: 90%;
+}
+
+.HU-1-3 .rightpanel__link {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.HU-1-3 .rightpanel__link a {
+  font-family: "Dhurjati";
+  font-weight: 400;
+  color: white;
+  font-size: 3.6rem;
+  line-height: 6.7rem;
+  display: inline-block;
+  margin: 0;
+  text-decoration: none;
+}
+
+.HU-1-3 .rightpanel__link hr {
+  width: 10rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+} 
+.HU-1-2, .HU-1-4 {
+  padding-top: 65px;
+}
+
+.HU-1-2__h2 {
+  font-family: "Doppio One", sans-serif;
+  font-size: 4.8rem;
+  color: white;
+  text-align: center;
+  margin: 0;
+  position: relative;
+  font-weight: 400;
+}
+
+.HU-1-2__product, .HU-1-4__product {
+  display: flex;
+  padding: 5%;
+}
+
+.product__info {
+  width: 50%;
+}
+
+.info__h2 {
+  font-family: "Doppio One", sans-serif;
+  font-size: 4.8rem;
+  color: white;
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.info__starting {
+  color: white;
+  margin: 0;
+  margin-right: 10%;
+}
+
+.info__price {
+  color: #ddafbf;
+  margin: 0;
+}
+
+.info__prices {
+  display: flex;
+  font-family: "Doppio One";
+  font-size: 3.2rem;
+  font-weight: 400;
+}
+
+.info__lorum {
+  font-family: "Doppio One";
+  font-size: 20px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.57);
+  width: 90%;
+}
+
+.info__buy {
+  font-family: "Dhurjati";
+  font-weight: 400;
+  color: white;
+  font-size: 3.6rem;
+  line-height: 6.7rem;
+  border-bottom: 1px solid white;
+  display: inline-block;
+  margin: 0;
+  text-decoration: none;
+}
+
+.product__img img {
+  width: 590px;
 }/*# sourceMappingURL=style.css.map */
