--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ body{
 .main{
     .main__bg{
         width: 100vw;
-        background: url(./img/bg.png) 0 0/100% 100% no-repeat ;
+        background: url(./img/main/bg.png) 0 0/100% 100% no-repeat ;
     }
     .main__nav{
         padding: 56px 100px 125px 100px;
@@ -91,7 +91,7 @@ body{
                 padding-right: 225px;
                 display: flex;
                 justify-content: flex-start;
-                background: url(./img/magnifier.svg) 29px 18px no-repeat;
+                background: url(./img/main/magnifier.svg) 29px 18px no-repeat;
                 .elem2__search{
                     margin-left: 64px;
                     font-family: 'Doppio One';
@@ -103,7 +103,7 @@ body{
                 }
             }
             .elem2__bin{
-                background: url(./img/bin.svg) no-repeat;
+                background: url(./img/main/bin.svg) no-repeat;
                 width: 47px;
                 height: 44px;
                 text-align: center;
@@ -177,7 +177,7 @@ body{
                 line-height: 25px;         
                 color: #FFFFFF;
                 padding: 20px 62px;
-                background: url(./img/Subtract.svg) 0 0/100% 100% no-repeat;
+                background: url(./img/main/Subtract.svg) 0 0/100% 100% no-repeat;
             }
             .description__link{
                 text-decoration: none;
