--- a/style.scss
+++ b/style.scss
@@ -216,8 +216,10 @@ body{
     width: 125px;
     position: absolute;
     left: 53.847%;
-    height: 405px;
-    top: 20%;
+    //height: 405px;
+    height: 403px;
+    //top: 20%;
+    top: 109px;
   }
   .HU-1-3__leftpanel .leftpanel__backimg {
       position: absolute;
