--- a/style.css
+++ b/style.css
@@ -205,8 +205,8 @@ body {
   width: 125px;
   position: absolute;
   left: 53.847%;
-  height: 405px;
-  top: 20%;
+  height: 403px;
+  top: 109px;
 }
 
 .HU-1-3__leftpanel .leftpanel__backimg {
