--- a/style.scss
+++ b/style.scss
@@ -51,7 +51,7 @@ body{
             }
             .elem1__text{
                 .elem1__text1{
-                    font-family: 'Quicksand';
+                    font-family: 'Quicksand', sans-serif;
                     font-style: normal;
                     font-weight: 700;
                     font-size: 1.6rem;
@@ -63,7 +63,7 @@ body{
                     text-transform: uppercase;
                 }
                 .elem1__text2{
-                    font-family: 'Quicksand';
+                    font-family: 'Quicksand', sans-serif;
                     font-style: normal;
                     font-weight: 700;
                     font-size: 1.6rem;
