--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: Dhurjati;
-  src: url(../Fonts/Dhurjati-Regular.ttf);
+  src: url(./Fonts/Dhurjati-Regular.ttf);
 }
 @font-face {
   font-family: Doppio One;
-  src: url(../Fonts/DoppioOne-Regular.ttf);
+  src: url(./Fonts/DoppioOne-Regular.ttf);
 }
 @font-face {
   font-family: Quicksand;
-  src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
+  src: url(./Fonts/Quicksand-VariableFont_wght.ttf);
 }
 @font-face {
   font-family: Montserrat;
@@ -50,7 +50,7 @@ body {
   height: 105%;
 }
 .main .main__nav .nav__elem1 .elem1__text .elem1__text1 {
-  font-family: "Quicksand";
+  font-family: "Quicksand", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 1.6rem;
@@ -62,7 +62,7 @@ body {
   text-transform: uppercase;
 }
 .main .main__nav .nav__elem1 .elem1__text .elem1__text2 {
-  font-family: "Quicksand";
+  font-family: "Quicksand", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 1.6rem;
