--- a/style.scss
+++ b/style.scss
@@ -1,17 +1,17 @@
 //fonts
 @font-face {
     font-family: Dhurjati;
-    src: url(../Fonts/Dhurjati-Regular.ttf);
+    src: url(./Fonts/Dhurjati-Regular.ttf);
 }
 
 @font-face {
     font-family: Doppio One;
-    src: url(../Fonts/DoppioOne-Regular.ttf);
+    src: url(./Fonts/DoppioOne-Regular.ttf);
 }
 
 @font-face {
     font-family: Quicksand;
-    src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
+    src: url(./Fonts/Quicksand-VariableFont_wght.ttf);
 }
 
 @font-face {
@@ -56,7 +56,7 @@ body{
             }
             .elem1__text{
                 .elem1__text1{
-                    font-family: 'Quicksand';
+                    font-family: 'Quicksand', sans-serif;
                     font-style: normal;
                     font-weight: 700;
                     font-size: 1.6rem;
@@ -68,7 +68,7 @@ body{
                     text-transform: uppercase;
                 }
                 .elem1__text2{
-                    font-family: 'Quicksand';
+                    font-family: 'Quicksand', sans-serif;
                     font-style: normal;
                     font-weight: 700;
                     font-size: 1.6rem;
