--- a/style.css
+++ b/style.css
@@ -1,20 +1,52 @@
 @font-face {
-  font-family: Dhurjati;
-  src: url(../Fonts/Dhurjati-Regular.ttf);
-}
-@font-face {
-  font-family: Doppio One;
-  src: url(../Fonts/DoppioOne-Regular.ttf);
-}
-@font-face {
-  font-family: Quicksand;
-  src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
-}
-html {
-  font-size: 10px;
-}
+    font-family: Dhurjati;
+    src: url(../Fonts/Dhurjati-Regular.ttf);
+  }
+  @font-face {
+    font-family: Doppio One;
+    src: url(../Fonts/DoppioOne-Regular.ttf);
+  }
+  @font-face {
+    font-family: Quicksand;
+    src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
+  }
+  html {
+    font-size: 10px;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+  }/*# sourceMappingURL=style.css.map */
+.stolb{
+    color:white;
+    width: 110px;
+  .niz1 {
+    color:white;
+    margin: 0px 0px -45px 30px ;
+    text-align: left;
+    display: block;
+ border: 1px;
 
-body {
-  margin: 0;
-  padding: 0;
-}/*# sourceMappingURL=style.css.map */
+   }
+   .niz2 {
+    color:white;
+    margin: 34px 30px 0px 0px ;
+    text-align: right;
+    display: block;
+border: 1px;
+
+   }
+   .da{
+    margin: 0;
+    position: relative;
+    width: 100vw;
+    background: linear-gradient(112deg, rgb(6,7,17) , rgb(6,76,89) );
+
+   }    height: 150px;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 0px 0px 13%;
+   /* border: solid 1px black;*/
+}
+ 
