--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,11 @@
     font-family: Quicksand;
     src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
 }
+
+@font-face {
+  font-family: Montserrat;
+  src: url(./Fonts/Montserrat-VariableFont_wght.ttf);
+}
 //
 
 html{
@@ -186,7 +191,7 @@ body{
     }
 }
 
-//asdasdsadasdsadsadsa
+//Section 2 below
 
 .recommendation {
     margin: 0;
@@ -216,9 +221,7 @@ body{
     width: 125px;
     position: absolute;
     left: 53.847%;
-    //height: 405px;
     height: 403px;
-    //top: 20%;
     top: 109px;
   }
   .HU-1-3__leftpanel .leftpanel__backimg {
@@ -372,3 +375,120 @@ body{
   .product__img img{
     width: 590px;
   }
+
+  ///////////////Section 3 below
+  .shop__select>div{
+    border:0.5vw solid #3C3B4B;
+    border-radius: 0.5vw;
+    width: 40vw;
+    height: 25vw;
+    overflow: hidden;
+}
+.shop{
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    font-family: 'Doppio One';
+    font-weight: 400;
+    padding-bottom: 9vw;
+    h3{
+        margin: 0 auto;
+        padding:3vw 0;
+        text-align: center;
+        color: #fff;
+        font-size: 3.5vw;
+        font-weight: 300;
+    }
+    &__mouse-price,&__pad-price,&__headphones-price,&__keyboard-price{
+        margin-top: 2vw;
+        width: fit-content;
+        margin-left: 3vw;
+        p{
+            margin-bottom: 0.5vw;
+            font-size: 1.2vw;
+            font-weight: normal;
+        }
+        span{
+            color: #0897AB;
+            font-size: 1.5vw ;
+        }
+    }
+    &__mouse-text,&__pad-text,&__headphones-text,&__keyboard-text{
+        font-family: 'Montserrat';
+        color:#2D2D39;
+        font-size: 9.5vw;
+        font-weight: 800;
+        text-transform: uppercase;
+        position: relative;
+        left: -5%;
+        margin-top: 2vw;
+    }
+    &__mouse-desc,&__pad-desc,&__headphones-desc,&__keyboard-desc{
+        font-size: 1.5vw;
+        position: relative;
+        left: 8%;
+        bottom: 50%;
+        font-weight: normal;
+    }
+    &__mouse-btn,&__keyboard-btn,&__pad-btn,&__headphones-btn{
+        position: sticky;
+        bottom: 5%;
+        left: 5%;
+        width: fit-content;
+        font-weight: normal;
+        a{
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.5vw;
+            text-transform: uppercase;
+            text-align: center;
+            font-weight: normal;
+        }
+        div{
+            background-color: #0897AB;
+            clip-path: polygon(15% 0%, 95% 0, 100% 20%, 100% 85%, 100% 100%, 5% 100%, 0 80%, 0 0);
+            width: 16vw;
+            height: 4vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 100;
+        }
+    }
+    &__keyboard,&__pad{
+        margin-left:1.5vw;
+    }
+    &__mouse,&__headphones{
+        margin-right:1.5vw;
+    }
+    &__headphones,&__keyboard{
+        margin-top: 3.5vw;
+    }
+
+    img{
+        width: 16vw;
+        position: sticky;
+        left: 60%;
+        bottom: 60%;
+    }
+    &__mouse>img{
+        width: 23vw;
+        left: 45%;
+    }
+    &__headphones>img{
+        width: 19vw;
+        left: 54%;
+    }
+    &__pad>img{
+        width: 21vw;
+        left: 49%;
+    }
+    &__select{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+    }
+
+}
